--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,32 +7,28 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
    http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd">
   <display-name>Archetype Created Web Application</display-name>
-  <servlet>
-    <servlet-name>Jersey Web Application</servlet-name>
-    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
-    <init-param>
-      <param-name>jersey.config.server.provider.packages</param-name>
-      <param-value>resource</param-value>
-    </init-param>
-    <load-on-startup>1</load-on-startup>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>Jersey Web Application</servlet-name>
-    <url-pattern>/ultimaCompra/*</url-pattern>
-  </servlet-mapping>
+<!--  <servlet>-->
+<!--    <servlet-name>Jersey Web Application</servlet-name>-->
+<!--    <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>-->
+<!--    <init-param>-->
+<!--      <param-name>jersey.config.server.provider.packages</param-name>-->
+<!--      <param-value>resource</param-value>-->
+<!--    </init-param>-->
+<!--    <load-on-startup>1</load-on-startup>-->
+<!--  </servlet>-->
+<!--  <servlet-mapping>-->
+<!--    <servlet-name>Jersey Web Application</servlet-name>-->
+<!--    <url-pattern>/ultimaCompra/*</url-pattern>-->
+<!--  </servlet-mapping>-->
 
-  <error-page>
-    <error-code>404</error-code>
-    <location>/ErrosServlet</location>
-  </error-page>
-  <error-page>
-    <exception-type>java.io.FileNotFoundException</exception-type>
-    <location>/ErrosServlet</location>
-  </error-page>
-  <error-page>
-    <exception-type>500</exception-type>
-    <location>/ErrosServlet</location>
-  </error-page>
+<!--  <error-page>-->
+<!--    <error-code>404</error-code>-->
+<!--    <location>/ErrosServlet</location>-->
+<!--  </error-page>-->
+<!--  <error-page>-->
+<!--    <exception-type>500</exception-type>-->
+<!--    <location>/ErrosServlet</location>-->
+<!--  </error-page>-->
 </web-app>
 
 
